[package]
name = "fluid_mechanics_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
peroxide = "0.31.6"
uom = { git = "https://github.com/iliekturtles/uom", version = "0.33.0" }

# library and binary key
[[bin]]
name = "fluid_mechanics_rust_bin"
path = "src/main.rs"

[lib]
name = "fluid_mechanics_rust"
path = "src/lib/lib.rs"
