[package]
name = "fluid_mechanics_rust"
version = "0.0.10"
edition = "2021"
license = "GPL-3.0"
description = "A Fluid Mechanics Library with useful traits and functions in Rust (part of a thermal hydraulics library)"
homepage = "https://github.com/theodoreOnzGit/fluid_mechanics_rust"
repository ="https://github.com/theodoreOnzGit/fluid_mechanics_rust"
readme = "README.md"
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
peroxide = "0.31.6"
roots = "0.0.8"
uom = { git = "https://github.com/iliekturtles/uom", version = "0.33.0" }

# library and binary key
[[bin]]
name = "fluid_mechanics_rust_bin"
path = "src/main.rs"

[lib]
name = "fluid_mechanics_rust"
path = "src/lib/lib.rs"
